syntax = "proto3";

package yir.kafka;

option go_package = "yir/kafka;kafka";

message Tirads {
  double tirads_1 = 1;
  double tirads_2 = 2;
  double tirads_3 = 3;
  double tirads_4 = 4;
  double tirads_5 = 5;
}

// Приписка ML указывает на другой формат хранения структур, они не содержат ID
// так как он должен быть сгенерен на стороне Uzi Service
message MlSegment {
  string image_id = 300;

  string contor_url = 400;
  Tirads tirads = 500;
}

message MlFormation {
  repeated MlSegment segments = 100;
  Tirads tirads = 200;
}

message uzi_upload_event { string uzi_id = 100; }

message uzi_splitted_loaded_event {
  string uzi_id = 100;
  repeated string pages_id = 200;
}

message uzi_ml_segmentated_classificated_event {
  repeated MlFormation formations = 100;
}